Created of new documentation directories and modification of old ones.
Moved sphinx generated dos to spanish directory. Moved report to its own
directory. Created new lang directories.

--- a/docs/report/en/report.tex
+++ b/docs/report/en/report.tex
@@ -9,7 +9,7 @@
 
 \begin{center}
 
-\includegraphics[scale=0.3]{logo_cidadania_2.eps}\\
+\includegraphics[scale=0.3]{images/logo_ecidadania.eps}\\
 
 \textsc{\Huge e-cidadania}\\
 \large Citizen participation platform based on web services\\[0.3cm]
@@ -70,7 +70,7 @@ In this citizen participation platform the users will have access to the system 
 
 \begin{figure}
 	\centering
-		\includegraphics[scale=1]{./architecture.eps}\\
+		\includegraphics[scale=1]{images/architecture.eps}\\
 	\caption{Platform Architecture of e-cidadania}
 
 \end{figure}
