--- a/src/e_cidadania/apps/news/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/news/locale/es/LC_MESSAGES/django.po
@@ -2,53 +2,54 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-02-14 10:51+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-02-14 12:50\n"
+"Last-Translator: <admin@admin.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Translated-Using: django-rosetta 0.5.6\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: admin.py:39
 msgid "Other data"
-msgstr ""
+msgstr "Otros datos"
 
 #: models.py:35
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: models.py:36
 msgid "Text"
-msgstr ""
+msgstr "Texto"
 
 #: models.py:37
 msgid "Date"
-msgstr ""
+msgstr "Fecha"
 
 #: models.py:38
 msgid "Last update"
-msgstr ""
+msgstr "Última actualización"
 
 #: models.py:39
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: models.py:40
 msgid "Publish in index page"
-msgstr ""
+msgstr "Publicar en la página de inicio"
 
 #: models.py:41
 msgid "Publish in"
-msgstr ""
+msgstr "Publicado en"
 
 #: models.py:42
 msgid "If you want to post to the index leave this blank"
-msgstr ""
+msgstr "Si desea publicar en el índice deje esto en blanco"
